crates/schematic/tests/snapshots/generator_test__pkl_schema__all_field_shapes.snap
---
source: crates/schematic/tests/generator_test.rs
expression: "render_type::<DocsConfig>()"
---
// Automatically generated by schematic. DO NOT MODIFY!

/// A config that exercises everything the docs can describe.
///
/// - With a list item.
/// - And another.
module DocsConfig

import "AnotherConfig.pkl"
import "BasicEnum.pkl"
import "Targets.pkl"

/// An optional boolean.
boolean: Boolean?

/// An inline struct.
duration: Duration

/// A constrained string.
ident: String(length.isBetween(1, 32), matches(Regex(#"^[a-z][a-z0-9-]*$"#)))?

/// An enum, which carries its own default.
level: BasicEnum.BasicEnum

/// A list of nested configs.
list: Listing<AnotherConfig>

/// A map of enums.
map: Mapping<String, BasicEnum.BasicEnum>

/// A string with a default and aliases.
name: String = "hello"

/// An optional nested config.
nested: AnotherConfig?

/// A list of nullable enums.
nullable_items: Listing<BasicEnum.BasicEnum?>

/// A deprecated field, use `name` instead.
@Deprecated { message = "Use `name` instead." }
old_name: String?

/// A tuple of values.
pair: Pair<String, UInt32>

/// A constrained integer.
port: UInt16(isBetween(1024, 49151))

/// A union of a list or a map.
targets: Targets.Targets
