crates/schematic/tests/snapshots/generator_test__pkl_schema__amends_a_flattened_struct_when_nothing_else_is_declared.snap
---
source: crates/schematic/tests/generator_test.rs
expression: "modules.get(\"AmendingConfig.pkl\").unwrap()"
---
// Automatically generated by schematic. DO NOT MODIFY!

/// Flattens the base, and nothing else.
module AmendingConfig

amends "BaseConfig.pkl"
