crates/schematic/tests/snapshots/generator_test__pkl_schema__extends_a_flattened_struct.snap
---
source: crates/schematic/tests/generator_test.rs
expression: "modules.get(\"ExtendingConfig.pkl\").unwrap()"
---
// Automatically generated by schematic. DO NOT MODIFY!

/// Flattens the base, alongside settings of its own.
module ExtendingConfig

extends "BaseConfig.pkl"

own: Boolean
