crates/schematic/tests/snapshots/generator_test__pkl_schema__fallback_enum.snap
---
source: crates/schematic/tests/generator_test.rs
expression: "render_type::<FallbackEnum>()"
---
// Automatically generated by schematic. DO NOT MODIFY!

module FallbackEnum

typealias FallbackEnum = *"foo" | "bar" | "baz" | String
