crates/schematic/tests/snapshots/generator_test__pkl_schema__partials.snap
---
source: crates/schematic/tests/generator_test.rs
expression: "render(generator, PklSchemaOptions::default())"
---
// Automatically generated by schematic. DO NOT MODIFY!

@Deprecated
module PartialGenConfig

import "BasicEnum.pkl"
import "FallbackEnum.pkl"
import "PartialAnotherConfig.pkl"

boolean: Boolean?

date: String?

datetime: String?

decimal: String?

/// This is a list of `enumerable` values.
enums: BasicEnum.BasicEnum?

fallback_enum: FallbackEnum.FallbackEnum?

float32: Float?

float64: Float?

indexmap: Mapping<String, String>?

indexset: Listing<String>?

json_value: Any?

map: Mapping<String, UInt>?

/// **Nested** field.
nested: PartialAnotherConfig?

number: UInt?

path: String?

regex: String?

rel_path: String?

string: String?

time: String?

toml_value: Any?

url: String?

uuid: String?

/// This is a list of strings.
vector: Listing<String>?

version: String?

version2: String?

version_req: String?

yaml_value: Any?
