crates/schematic/tests/snapshots/generator_test__pkl_schema__quotes_identifiers.snap
---
source: crates/schematic/tests/generator_test.rs
expression: "render_type::<IdentifiersConfig>()"
---
// Automatically generated by schematic. DO NOT MODIFY!

module IdentifiersConfig

$schema: String?

`class`: String

default: String?

`kebab-case`: String?

// The `output` setting cannot be declared, as every Pkl module reserves it.
