crates/schematic/tests/snapshots/generator_test__pkl_schema__recursive_union_breaks_the_cycle.snap
---
source: crates/schematic/tests/generator_test.rs
expression: "render_type::<Expr>()"
---
// Automatically generated by schematic. DO NOT MODIFY!

module Expr

/// A value, or a list of values.
typealias Expr = String|Listing<Any>
