crates/schematic/tests/snapshots/generator_test__pkl_schema__rust_types.snap
---
source: crates/schematic/tests/generator_test.rs
expression: "render_type::<TypesConfig>()"
---
// Automatically generated by schematic. DO NOT MODIFY!

/// Covers the conversion of each Rust type.
module TypesConfig

import "BasicEnum.pkl"
import "KeyEnum.pkl"

btree_set: *Listing<UInt8>(isDistinct) | List<UInt8>(isDistinct) | Set<UInt8>

character: Char

duration: Duration

enum_map: *Mapping<KeyEnum.KeyEnum, String> | Map<KeyEnum.KeyEnum, String>

escaped: String = "quote \" and backslash \\ and \\(interpolation)"

fixed_array: *Listing<String>(length == 3) | List<String>(length == 3) | Set<String>(length == 3)

float32: Float = 1.0

float64: Float = 2.5

ident: String(length.isBetween(1, 32), matches(Regex(#"^[a-z][a-z0-9-]*$"#)))

int128: Int

int16: Int16

int32: Int32

int64: Int

int8: Int8

isize: Int

json: Any

level: BasicEnum.BasicEnum = "bar"

maybe_duration: Duration?

non_zero: UInt8(this >= 1)?

nullable_items: *Listing<BasicEnum.BasicEnum?> | List<BasicEnum.BasicEnum?> | Set<BasicEnum.BasicEnum?>

@Deprecated { message = "Use `level` instead." }
old_level: BasicEnum.BasicEnum?

pair: Pair<String, UInt32>

port: UInt16(isBetween(1024, 49151))

set: *Listing<String>(isDistinct) | List<String>(isDistinct) | Set<String>

triple: *Listing<String | UInt32 | Boolean>(length == 3) | List<String | UInt32 | Boolean>(length == 3)

uint128: UInt

uint16: UInt16

uint32: UInt32

uint64: UInt

uint8: UInt8

usize: UInt
