crates/schematic/tests/snapshots/generator_test__pkl_schema__tagged_enums_adjacent.snap
---
source: crates/schematic/tests/generator_test.rs
expression: "modules.get(\"AdjacentTagged.pkl\").unwrap()"
---
// Automatically generated by schematic. DO NOT MODIFY!

module AdjacentTagged

import "ExternalTaggedConfig.pkl"

typealias AdjacentTagged = AdjacentTaggedFoo|AdjacentTaggedBar|AdjacentTaggedQux

class AdjacentTaggedFoo {
  type: "Foo"
}

class AdjacentTaggedBar {
  content: Boolean

  type: "Bar"
}

class AdjacentTaggedQux {
  content: ExternalTaggedConfig

  type: "Qux"
}
