crates/schematic/tests/snapshots/generator_test__pkl_schema__tagged_enums_external.snap
---
source: crates/schematic/tests/generator_test.rs
expression: "modules.get(\"ExternalTagged.pkl\").unwrap()"
---
// Automatically generated by schematic. DO NOT MODIFY!

module ExternalTagged

import "ExternalTaggedConfig.pkl"

typealias ExternalTagged = "Foo" | ExternalTaggedBar | ExternalTaggedBaz | ExternalTaggedQux

class ExternalTaggedBar {
  Bar: Boolean
}

/// A pair of values.
class ExternalTaggedBaz {
  Baz: Pair<UInt, String>
}

class ExternalTaggedQux {
  Qux: ExternalTaggedConfig
}
